--- a/gallery.html
+++ b/gallery.html
@@ -402,14 +402,14 @@
                     <div class="container">
                         <div class="header-container">
                             <div class="logo logo-1 logo-white"><a href="index.html"><img class="img-fluid"
-                                        src="logoname.png" alt="Sridhar Bharathy Photography"
+                                        src="logoname.png" alt="A Rahul Photography"
                                         data-lazy-src="logoname.png"><noscript><img class="img-fluid" src="logoname.png"
-                                            alt="Sridhar Bharathy Photography"></noscript></a>
+                                            alt="A Rahul Photography"></noscript></a>
                             </div>
                             <div class="logo logo-1 logo-dark"><a href="index.html"><img class="img-fluid"
-                                        src="logoname.png" alt="Sridhar Bharathy Photography"
+                                        src="logoname.png" alt="A Rahul Photography"
                                         data-lazy-src="logoname.png"><noscript><img class="img-fluid" src="logoname.png"
-                                            alt="Sridhar Bharathy Photography"></noscript></a>
+                                            alt="A Rahul Photography"></noscript></a>
                             </div>
                             <nav class="nav-holder nav-holder-1">
                                 <ul id="menu-main-menu-1" class="menu-nav">
